Add user GET endpoints
Enabled security restriction (by enpoint path) so only admins can manage users
